--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -23,7 +23,6 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11744462.md#1" target="_blank">孩子出国留学 多早不算太早</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11744462.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_89424327_Subscription_L-150x120.jpg" align ="left"></a>大学生到国外学习已变得越来越普遍，但一些父母可能希望能更早如在中学或高中期间将孩子送往国外。其利弊得失如何权衡，这需要根据个人、家庭具体情况全面考量。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11744430.md#1" target="_blank">培养孩子理财能力 从小开始</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11744430.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_135292016_Subscription_L-150x120.jpg" align ="left"></a>在瞬息万变的世界里，教孩子如何理财日益重要。具备良好的理财能力，有助于孩子更好应对成年后遇到的经济挑战。培养理财意识和能力宜从小开始，在日常生活中随处都可向孩子示范预算、花销和储蓄的基本意识，帮助他们养成良好的消费习惯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/12/24/n3466807.md#1" target="_blank">【圣诞画作赏析】查理?勒布杭《牧羊人的礼拜》</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/12/24/n3466807.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/12/1280px-Le_Brun_Charles_-_Adoration_of_the_Shepherds_-_1689-150x120.jpg" align ="left"></a>即将迈向新的一年，但在这之前我们要先迎接让大人小孩欢心喜悦的日子，众多基督徒们庆祝耶稣基督降生的庆祝日─圣诞节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 2:24 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11749461.md#1" target="_blank">唐浩：忧神州</a><br></h3>秋雨绵绵故绪浓   落枫片片载千愁   霾封中原惑难醒   遥望故土寒心忧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11749446.md#1" target="_blank">诗歌：愁</a><br></h3>滴滴雨声落檐头 寞寞夜半梦中愁 天上人间多少盼 又有多少盼未酬......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11748750.md#1" target="_blank">神力神迹与神技的磁气民族</a><br></h3>
 研究犹太文化可以激醒浅睡中的“磁气文化 ”——中国文化中的“金神文化”(2-1)
@@ -39,5 +38,6 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11745115.md#1" target="_blank">唐浩：香江预</a><br></h3>恶法连连无底线   邪丑癫狂舞黑剑   众业缠身妖自焚   红霾消溃故园现......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11745238.md#1" target="_blank">五律：酒（二）</a><br></h3>此来亲道骨，何去带仙风。
 一醉云霄外，九升天地中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:55 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742891.md#1" target="_blank">唐浩：末战</a><br></h3>正邪决战末戏演   香江烽火漫连天   善扬德胜败恶堕   传奇永铭凌霄巅......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_5.md#1<br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fcjmkl2375/djy/blob/master/gb/news2007_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_5.htm">http://www.epochtimes.com/gb/news2007_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
